examples/kubernetes-es/es-sw-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
spec:
  type: NodePort
  selector:
    component: elasticsearch
  ports:
  - name: http
    port: 9200
    protocol: TCP
  - name: transport
    port: 9300
    protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: outpost
  labels:
    app: outpost
spec:
  containers:
  - name: esclient
    image: docker.io/cilium/esindexclient:v1 
---
apiVersion: v1
kind: Pod
metadata:
  name: empire-hq
  labels:
    app: empire-hq
spec:
  containers:
  - name: esclient
    image: docker.io/cilium/esindexclient:v1 
---
apiVersion: v1
kind: Pod
metadata:
  name: warship
  labels:
    app: warship
spec:
  containers:
  - name: esclient
    image: docker.io/cilium/esindexclient:v1
